--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
+
 <body>
     <div id="container">
         <div id="screen"></div>
         <div id="keyboard">
-            <button class="num">1</button>
-            <button class="num">2</button>
-            <button class="num">3</button>
-            <button class="num">4</button>
-            <button class="num">5</button>
-            <button class="num">6</button>
-            <button class="num">7</button>
-            <button class="num">8</button>
-            <button class="num">9</button>
-            <button class="num">0</button>
-            <button class="num">+</button>
-            <button class="num">-</button>
-            <button class="num">*</button>
-            <button class="num">/</button>
-            <button class="num">=</button>
-            <button class="num">.</button>
+            <button class="key num">1</button>
+            <button class="key num">2</button>
+            <button class="key num">3</button>
+            <button class="key operator">+</button>
+            <button class="key num">4</button>
+            <button class="key num">5</button>
+            <button class="key num">6</button>
+            <button class="key operator">-</button>
+            <button class="key num">7</button>
+            <button class="key num">8</button>
+            <button class="key num">9</button>
+            <button class="key operator">*</button>
+            <button class="key num">.</button>
+            <button class="key num">0</button>
+            <button class="key equal">=</button>
+            <button class="key operator">/</button>
         </div>
     </div>
 </body>
