--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <button class="key equal">=</button>
             <button class="key operator">/</button>
         </div>
+        <button id="clear">Max Verstappen</button>
     </div>
 </body>
 </html>
